# safecopy

./: LICENSE  README.md  pyproject.toml  setup.py
src/: __main__.py
src/safecopy/: __main__.py  actions.py  cli.py  consts.py  file_copier.py  rsync_delta.py  utils.py
