[tool.poetry]
name = "safecopy"
version = "1.3.3"
description = "Simple secure file copy. Alternative to rsync."
license = "GPL-3.0-only"
authors = ["TopDevPros <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/safecopy"

[tool.poetry.dependencies]
python = ">3.9"
safelog = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"